libode_la_includedir = $(includedir)/ode
libode_la_include_HEADERS = \
    collision.h \
    collision_space.h \
    collision_trimesh.h \
    common.h \
    compatibility.h \
    contact.h \
    cooperative.h \
    error.h \
    export-dif.h \
    mass.h \
    matrix.h matrix_coop.h \
    memory.h \
    misc.h \
    objects.h \
    ode.h \
    odeconfig.h \
    odecpp.h \
    odecpp_collision.h \
    odeinit.h \
    odemath.h \
    odemath_legacy.h \
    rotation.h \
    threading.h \
    threading_impl.h \
    timer.h


EXTRA_DIST = README precision.h.in version.h.in

dist_libode_la_include_HEADERS = precision.h version.h


